--- a/package.json
+++ b/package.json
@@ -1,20 +1,35 @@
 {
-  "name": "InfinityScroll",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/PetarQuantox/InfinityScroll.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/PetarQuantox/InfinityScroll/issues"
-  },
-  "homepage": "https://github.com/PetarQuantox/InfinityScroll#readme"
+	"name": "InfinityScroll",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node server",
+		"server": "nodemon server",
+		"client": "npm start --prefix client",
+		"dev": "concurrently \"npm run server\" \"npm run client\""
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/PetarQuantox/InfinityScroll.git"
+	},
+	"keywords": [
+		"react",
+		"scroll"
+	],
+	"author": "Petar Pavlovic",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/PetarQuantox/InfinityScroll/issues"
+	},
+	"homepage": "https://github.com/PetarQuantox/InfinityScroll#readme",
+	"dependencies": {
+		"babel-register": "^6.26.0",
+		"concurrently": "^4.1.0",
+		"express": "^4.16.4",
+		"node-fetch": "^2.3.0",
+		"nodemon": "^1.18.10",
+		"universal-config": "^0.3.0",
+		"unsplash-js": "^5.0.0"
+	}
 }
